# ORCESTRA

./: .gitignore  README.md  pyproject.toml
S1_acquisition/cron_task/: last_downloaded.txt  task.sh
S1_acquisition/data/: S1A_MP_USER_20240910T174000_20240930T194000.kml
S1_acquisition/notebooks/: S1_acquisition_plan.ipynb  example.ipynb
S1_acquisition/src/: file_download.py  read_kml.py  visualisation.py  visualize_download.py
S1_acquisition/src/misc/: utils.py
