[project]
name = "S1_acquisition_tool"
dynamic = ["version"]
authors = [
  { name="Owen O'D"},
]
description = "Download and visualize Sentinel-1 orbit acquisition plan"
readme = "README.md"
requires-python = ">=3.12.0"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
]


dependencies = [
  "xarray",
  "numpy",
  "pandas",
  "scipy",
  "matplotlib",
  "cmcrameri",
  "ipykernel",
  "requests",
  "fiona",
  "geopandas",
  "cartopy",
  "beautifulsoup4",
  "lxml"
]

[project.optional-dependencies]
test = ['pytest']


[project.urls]
Homepage = "https://github.com/owenodriscoll/ORCESTRA"